# pdfquirk

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  README.md  pdfquirk.appdata.xml  pdfquirk.desktop
.github/workflows/: appimage.yml
ci/: build.sh
resources/: licenseheader.txt  pdfquirk.qrc  pdfquirk_de.ts  pdfquirk_es.ts
src/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  executor.cpp  executor.h  imagelistdelegate.cpp  imagelistdelegate.h  imagemodel.cpp  imagemodel.h  main.cpp  pdfcreator.cpp  pdfcreator.h  pdfexporter.cpp  pdfexporter.h  pdfquirk_de.ts  pdfquirkimage.cpp  pdfquirkimage.h  settings.cpp  settings.h  update_translations.sh  version.h
